<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fragment__card__back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/transparent"
        android:src="@drawable/back_button"
        android:backgroundTint="@color/white"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment__card__title"
        style="@style/text"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/fragment__card__description"
        app:layout_constraintEnd_toStartOf="@id/fragment__card__star"
        app:layout_constraintStart_toEndOf="@id/fragment__card__back"
        app:layout_constraintTop_toTopOf="@id/fragment__card__back"
        tools:text="Title" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/fragment__card__star"
        app:layout_constraintTop_toTopOf="@id/fragment__card__title"
        app:layout_constraintBottom_toBottomOf="@id/fragment__card__description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/selector_checkbox"
        android:layout_gravity="end"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment__card__description"
        app:layout_constraintTop_toBottomOf="@id/fragment__card__title"
        app:layout_constraintStart_toStartOf="@id/fragment__card__title"
        app:layout_constraintEnd_toEndOf="@id/fragment__card__title"
        app:layout_constraintBottom_toBottomOf="@id/fragment__card__back"
        style="@style/text"
        android:layout_height="wrap_content"
        tools:text="Description"
        android:textSize="15sp"
        android:fontFamily="@font/montserrat_regular"
   />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/fragment__card_swipe"
        app:layout_constraintTop_toBottomOf="@id/fragment__card__description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__rank"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/fragment__card__rank"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__rank_value"
                app:layout_constraintStart_toEndOf="@id/fragment__card__rank"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__rank"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__rank"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__price"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price_value"
                app:layout_constraintStart_toEndOf="@id/fragment__card__price"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textSize="25sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__marketcap"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__marketcap"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__marketcap_value"
                app:layout_constraintStart_toEndOf="@id/fragment__card__marketcap"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__marketcap"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__volume24h"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__marketcap"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__volume24h"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__volume24h_value"
                app:layout_constraintStart_toEndOf="@id/fragment__card__volume24h"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__volume24h"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price1h"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__volume24h"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change1h"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price1h_value"
                app:layout_constraintStart_toStartOf="@id/fragment__card__price24h_value"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price1h"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price24h"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price1h"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change24h"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price24h_value"
                app:layout_constraintStart_toEndOf="@id/fragment__card__price24h"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price24h"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price7d"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price24h"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change7d"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price7d_value"
                app:layout_constraintStart_toStartOf="@id/fragment__card__price24h_value"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price7d"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price30d"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price7d"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change30d"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price30d_value"
                app:layout_constraintStart_toStartOf="@id/fragment__card__price24h_value"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price30d"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price60d"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price30d"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change60d"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price60d_value"
                app:layout_constraintStart_toStartOf="@id/fragment__card__price24h_value"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price60d"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price90d"
                app:layout_constraintTop_toBottomOf="@id/fragment__card__price60d"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/fragment__card__change90d"
                android:textSize="15sp"
                android:fontFamily="@font/montserrat_regular"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment__card__price90d_value"
                app:layout_constraintStart_toStartOf="@id/fragment__card__price24h_value"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment__card__price90d"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_regular"
                tools:text="1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>